--- a/pages/post.mdx
+++ b/pages/post.mdx
@@ -10,7 +10,7 @@ export default function blogLayout({ children }) {
                     text-ui-text-regular sm:w-5/6 justify-center sm:max-w-5xl max-w-full"
         >
           <div className="flex flex-row flex-wrap justify-center gap-4">
-            <article className="prose prose-headings:text-ui-bright-blue">
+            <article className="prose sm:prose-lg prose-h1:text-ui-bright-blue prose-h2:text-ui-purple">
               {children}
             </article>
           </div>
@@ -20,7 +20,11 @@ export default function blogLayout({ children }) {
   );
 }
 
-# How I got my first job fresh out of college with no experience
+# How I got my first job as a new college graduate with no experience
 
-Graduating college is scary, trust me I know, but being a computer science
-student all I ever heard about was how hard it was going to be to graduate
+Graduating college is scary, trust me I know, there’s lots of stress about figuring out what you want to do and even after you figure that out you have to land a job.
+
+This post is mostly intended for computer science and particularly software engineering student’s or people who want to land a job in that field.
+
+## How Much Do you *Need* to Study
+When I was graduation I was studying my data strutting and algorithms all the time, I tried to spend time everyday doing leetcode problems so I would be prepared for the interview. I think this topic is blown way out of proportion. While, yes, during my interviews I did encounter some coding questions that I had to solve with hashmaps most of my interviews were very basic coding questions. I would say that I even studied too much. This question of how much to study though is very subjective and could change based on the kind of job you are going for. For me I have a job at a standard FinTech company, not at a FAANG (MAANG? MANGA?) company, so if you are trying to get a job at one of those you are going to have a different experience to me.
