looks for and automatically generates blog page and individual posts

--- a/posts/how-i-got-my-job.mdx
+++ b/posts/how-i-got-my-job.mdx
@@ -1,30 +1,15 @@
-import CenteredHeader from "../components/blog/centered-header.tsx";
-import Layout from "../components/layout.tsx";
-
-export default function blogLayout({ children }) {
-  return (
-    <Layout>
-      <section className="flex  items-center flex-col sm:leading-relaxed font-wotfard-300 pt-4">
-        <div
-          className="font-sans subpixel-antialiased font-normal
-                    text-ui-text-regular sm:w-5/6 justify-center sm:max-w-5xl max-w-full"
-        >
-          <div className="flex flex-row flex-wrap justify-center gap-4">
-            <article className="prose sm:prose-lg prose-h1:text-ui-bright-blue prose-h2:text-ui-purple">
-              {children}
-            </article>
-          </div>
-        </div>
-      </section>
-    </Layout>
-  );
-}
-
-# How I got my first job as a new college graduate with no experience
+---
+title: How I got my First Job out of College With no Experience
+date: August 7, 2022
+description: How I got my first job out of school while failing to gain  other professional experience through internships
+posted: false
+tags: ['life']
+---
 
 Graduating college is scary, trust me I know, there’s lots of stress about figuring out what you want to do and even after you figure that out you have to land a job.
 
 This post is mostly intended for computer science and particularly software engineering student’s or people who want to land a job in that field.
 
-## How Much Do you *Need* to Study
+## How Much Do you _Need_ to Study
+
 When I was graduation I was studying my data strutting and algorithms all the time, I tried to spend time everyday doing leetcode problems so I would be prepared for the interview. I think this topic is blown way out of proportion. While, yes, during my interviews I did encounter some coding questions that I had to solve with hashmaps most of my interviews were very basic coding questions. I would say that I even studied too much. This question of how much to study though is very subjective and could change based on the kind of job you are going for. For me I have a job at a standard FinTech company, not at a FAANG (MAANG? MANGA?) company, so if you are trying to get a job at one of those you are going to have a different experience to me.
