looks for and automatically generates blog page and individual posts

--- a/posts/how-i-got-my-job.mdx
+++ b/posts/how-i-got-my-job.mdx
@@ -2,31 +2,14 @@
 title: How I got my First Job out of College With no Experience
 date: August 7, 2022
 description: How I got my first job out of school while failing to gain  other professional experience through internships
-posted: true
+posted: false
 tags: ["life"]
 ---
 
-Graduating college is scary, trust me I know, there’s lots of stress about figuring out what you want to
-do and even after you figure that out you have to land a job.
+Graduating college is scary, trust me I know, there’s lots of stress about figuring out what you want to do and even after you figure that out you have to land a job.
 
-This post is mostly intended for computer science and particularly software engineering student’s or people
-who want to land a job in that field.
+This post is mostly intended for computer science and particularly software engineering student’s or people who want to land a job in that field.
 
 ## How Much Do you _Need_ to Study
 
-When I was graduation I was studying my data strutting and algorithms all the time, I tried to spend 
-time everyday doing leetcode problems so I would be prepared for the interview. I think this topic is blown 
-way out of proportion. While, yes, during my interviews I did encounter some coding questions that I 
-had to solve with hashmaps most of my interviews were very basic coding questions. I would say that I 
-even studied too much. This question of how much to study though is very subjective and could change based 
-on the kind of job you are going for. For me I have a job at a standard FinTech company, not at a FAANG 
-(MAANG? MANGA?) company, so if you are trying to get a job at one of those you are going to have a different experience to me.
-
-<span className="flex justify-center">
-  <Image
-    src="/assets/break-Mar 06 2022-0099.webp"
-    width={400}
-    height={300}
-    objectFit="cover"
-  />
-</span>
+When I was graduation I was studying my data strutting and algorithms all the time, I tried to spend time everyday doing leetcode problems so I would be prepared for the interview. I think this topic is blown way out of proportion. While, yes, during my interviews I did encounter some coding questions that I had to solve with hashmaps most of my interviews were very basic coding questions. I would say that I even studied too much. This question of how much to study though is very subjective and could change based on the kind of job you are going for. For me I have a job at a standard FinTech company, not at a FAANG (MAANG? MANGA?) company, so if you are trying to get a job at one of those you are going to have a different experience to me.
