syntax highlighting mdx component

--- a/posts/newpost.mdx
+++ b/posts/newpost.mdx
@@ -2,8 +2,15 @@
 title: this is a new post
 date: August 8, 2022
 description: test post
-posted: false
+posted: true
 tags: ["nothing"]
 ---
 
 this is a test
+
+<SyntaxHighlight language="typescript">
+{`
+let x = 111
+nothing: string = "this is a string"
+`}
+</SyntaxHighlight>
