MDX Additions - add blog to website using MDX and tailwind-typography

--- a/posts/how-i-got-my-job.mdx
+++ b/posts/how-i-got-my-job.mdx
@@ -1,6 +1,6 @@
 ---
 title: How I got my First Job out of College With no Experience
-date: August 23, 2022
+date: October 25, 2022
 description: How I got my first job out of school while failing to gain other professional experience through internships
 posted: true
 tags: ["life", “career”]
@@ -42,7 +42,7 @@ To be honest, there's not much to say here. If you know somebody hit them up and
 
 ### Send In Those Resumes
 
-I live in a modestly sized city that is better than most others for tech jobs, so I was lucky to have lots of openings to apply for. I applied to around 40-50 jobs when I was graduating from college. I was applying through LinkedIn mostly, and I was also using Indeed.
+I live in a modestly sized city that has a heathy amount of tech jobs, so I was lucky to have lots of openings to apply for. I applied to around 30-40 jobs when I was graduating from college. I was applying through LinkedIn mostly, and I was also using Indeed.
 
 For this you must make sure you have a good resume, which is a little out of scope for this post and I do not think I’m qualified to judge anyone's resume when I look at my own. But make sure it's up to date and looks good.
 
@@ -54,6 +54,12 @@ Got an interview? Now it's time to stress, right?
 
 Interviewing, in my opinion, is by far the worst aspect of software engineering, it is very stressful. Some people have strong opinions about how useless coding interviews are, but I think they do supply some value.
 
-I don’t have any secret to coding interviews, but I do have some advice. If you are going for jobs at non-FAANG companies, then the interview is, most likely, going to be easier than you think if you look on the internet for interview tips. I was studying using leetcode mainly and watching YouTube solution to the questions that I could not figure out. This was valuable because when I was asked basic questions in my interview, I was easily able to do them, and I knew the tricks to the questions.
+I don’t have any secret to doing well in coding interviews, but I do have advice. If you are going for jobs at non-FAANG companies, then the interview is, most likely, going to be easier than you think if you look on the internet for interview tips. I was studying using leetcode mainly and watching YouTube solution to the questions that I could not figure out. This was valuable because when I was asked basic questions in my interview, I was easily able to do them, and I knew the tricks to the questions.
 
-If you haven’t been exposed to coding questions yet, then I would say start with some easy questions on leetcode and go from there. You will eventually see that there are patterns that are used to answer different questions and these patterns are what I was using when I answered questions in interviews.
+If you have not been exposed to coding questions yet, then I would say start with some easy questions on leetcode and go from there. You will eventually see that there are patterns used to answer different questions. Learning these patterns is important to being good at these style of questions. My recommendation would be to learn a few basic patterns, like two pointers and hash map questions because those are the most popular.
+
+## Overall
+
+Do not stress as much as you are right now. Junior developer interviews are not as difficult as you have be lead to believe. As long as you have drive and want to become a good developer, you will make it.
+
+I wish you all the best!
